lib/tests/fixtures/compiler/parser/next_in_class.baseline
Error: next_in_class.pp:3:9: next statement cannot be used inside a class.
  next
  ^~~~
