lib/tests/fixtures/compiler/parser/next_in_class.pp
class foo() {
    if true {
        next
    }
}
